fix canary duration so they always run

--- a/deployment/canaries.yaml
+++ b/deployment/canaries.yaml
@@ -79,6 +79,7 @@ Resources:
           RuntimeVersion: syn-python-selenium-2.0
           Schedule: 
             Expression: 'rate(1 minute)' 
+            DurationInSeconds: 0
           RunConfig: 
             TimeoutInSeconds: 20
           FailureRetentionPeriod: 1
@@ -152,6 +153,7 @@ Resources:
           RuntimeVersion: syn-python-selenium-2.0
           Schedule: 
             Expression: 'rate(1 minute)' 
+            DurationInSeconds: 0
           RunConfig: 
             TimeoutInSeconds: 20
           FailureRetentionPeriod: 1
@@ -225,6 +227,7 @@ Resources:
           RuntimeVersion: syn-python-selenium-2.0
           Schedule: 
             Expression: 'rate(1 minute)' 
+            DurationInSeconds: 0
           RunConfig: 
             TimeoutInSeconds: 20
           FailureRetentionPeriod: 1
@@ -298,6 +301,7 @@ Resources:
           RuntimeVersion: syn-python-selenium-2.0
           Schedule: 
             Expression: 'rate(1 minute)' 
+            DurationInSeconds: 0
           RunConfig: 
             TimeoutInSeconds: 20
           FailureRetentionPeriod: 1
@@ -371,6 +375,7 @@ Resources:
           RuntimeVersion: syn-python-selenium-2.0
           Schedule: 
             Expression: 'rate(1 minute)' 
+            DurationInSeconds: 0
           RunConfig: 
             TimeoutInSeconds: 20
           FailureRetentionPeriod: 1
@@ -444,6 +449,7 @@ Resources:
           RuntimeVersion: syn-python-selenium-2.0
           Schedule: 
             Expression: 'rate(1 minute)' 
+            DurationInSeconds: 0
           RunConfig: 
             TimeoutInSeconds: 20
           FailureRetentionPeriod: 1
@@ -517,6 +523,7 @@ Resources:
           RuntimeVersion: syn-python-selenium-2.0
           Schedule: 
             Expression: 'rate(1 minute)' 
+            DurationInSeconds: 0
           RunConfig: 
             TimeoutInSeconds: 20
           FailureRetentionPeriod: 1
@@ -590,6 +597,7 @@ Resources:
           RuntimeVersion: syn-python-selenium-2.0
           Schedule: 
             Expression: 'rate(1 minute)' 
+            DurationInSeconds: 0
           RunConfig: 
             TimeoutInSeconds: 20
           FailureRetentionPeriod: 1
@@ -663,6 +671,7 @@ Resources:
           RuntimeVersion: syn-python-selenium-2.0
           Schedule: 
             Expression: 'rate(1 minute)' 
+            DurationInSeconds: 0
           RunConfig: 
             TimeoutInSeconds: 20
           FailureRetentionPeriod: 1
